[package]
name = "frontend_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frontend_rust"
path = "src/bin/main.rs"

[features]
default = []
tree-sitter-tests = ["dep:tree-sitter", "dep:tree-sitter-vale"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bumpalo = "3"
tree-sitter = { version = "0.24", optional = true }
tree-sitter-vale = { path = "../syntax-highlighting/tree-sitter-vale", optional = true }

[dev-dependencies]

[lib]
name = "frontend_rust"
path = "src/lib.rs"

