[package]
name = "frontend_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frontend_rust"
path = "src/bin/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bumpalo = { version = "3", features = ["collections", "allocator-api2"] }
indexmap = "2"
hashbrown = "0.16"
rustc-hash = "2"
paste = "1"

[dev-dependencies]
tempfile = "3"

[lib]
name = "frontend_rust"
path = "src/lib.rs"

