[package]
name = "writecop"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
chrono = "0.4"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
